# Bull_Scope

./: Dockerfile  README.md  requirements.txt  troubleshouting.txt
airflow/: airflow.cfg
airflow/dags/: daily_market_indicators.py  daily_price_update.py  daily_stock_update.py  daily_technical.py  init_full_etl.py  initial_full_stock_update.py  weekily_stock_list.py  weekly_fundamentals.py
airflow/dummy/: daily_stock_update.py  initial_full_stock_update.py
airflow/helper/: common.py
airflow/src/: base_collector.py  data_collector.py  fundamental_collector.py  market_collector.py  price_collector.py  stock_collector.py  support_resistance_collector.py  technical_collector.py
app/: main.py
app/models/: database.py  schemas.py
app/routers/: stocks.py
app/services/: fundamental_analyzer.py  technical_analyzer.py
dags/: daily_stock_update.py  initial_full_stock_update.py
migrations/: .env.LOCAL  init_db.py
migrations/sql/migrations/: 20250528_create_tables.sql  20250605_drop_tables.sql
migrations/sql/seeds/: 20250529_seed_tables.sql
scripts/: data_collector.py  pyproject.toml
scripts/helper/: .env.LOCAL  common.py
scripts/src/: data_collector.py
